update demo and en localize
240122

--- a/localization/en.json
+++ b/localization/en.json
@@ -3,11 +3,12 @@
   "please_wait": "Processing, please wait.",
   "enter_touch_mode": "Switching to touch mode.",
   "enter_separate_mode": "Switching to separate mode.",
-  "now_readout_mode": "Now at readout mode.",
+  "separate_mode_count_f": "Separate mode: {num_all} objects in total.",
+  "now_readout_mode": "Now at full view mode.",
   "no_object_selected": "No object has been selected",
-  "return_2_readout_mode": "Switching back to readout mode.",
-  "cursor_pick_empty": "No object at cursor position, switching back to readout mode.",
-  "separate_content_f": "Separate: number {nth} of {num_all}, detail: {detail}.",
+  "return_2_readout_mode": "Switching back to full view mode.",
+  "cursor_pick_empty": "No object at cursor position, switching back to full view mode.",
+  "separate_content_f": "Separate: number {nth} of {num_all}.",
   "invoke_fail": "Invoke GPT Failed, please contact staff.",
   "desc_surround_f": "Target description: {target_s} ; Surrounding: {surrounding_s}",
   "surround_f": "Surrounding: {surrounding_s}"
